# spr-2026-mammography-report-classification

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.mlflow  Makefile  README.md  docker-compose.yml  pyproject.toml  vulture_whitelist.py
.cursor/commands/: speckit.specify.md
.cursor/rules/: specify-rules.mdc
.dvc/: config
.specify/: init-options.json
.specify/extensions/: .registry
.specify/integrations/: gemini.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/presets/: .registry
.specify/workflows/: workflow-registry.json
data/: processed.dvc  raw.dvc
notebooks/: baseline.ipynb  eda.ipynb  ensemble.ipynb  kaggle_submission.ipynb  tfidf_classical.ipynb  train.ipynb  transformer.ipynb
specs/001-birads-classification/: data-model.md  experiment_summary.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-birads-classification/checklists/: ml-methodology.md
src/config/: mlflow_init.py
src/models/: model.py
src/models/classification/: adaboost.py  catboost_.py  decision_tree.py  extra_trees.py  gradient_boosting.py  knn.py  lightgbm_.py  logistic_regression.py  naive_bayes.py  random_forest.py  svm.py  xgboost_.py
src/models/regression/: adaboost.py  catboost_.py  decision_tree.py  elastic_net.py  extra_trees.py  gradient_boosting.py  knn.py  lasso.py  lightgbm_.py  linear_regression.py  random_forest.py  ridge.py  svm.py  xgboost_.py
src/preprocessing/: preprocess.py
src/utils/: download_dataset.py  generate_submission_file.py
